--- a/templates/error.html
+++ b/templates/error.html
@@ -20,16 +20,10 @@
             <p> Please Enter a valid Repository Name</p>
             <p></p>
             <form >		
-                <input class="btn " height="20px" width="40px" type="submit" value="Back"  onclick="Redirect();"  />
+                <input class="btn " height="20px" width="40px" type="submit" value="Back"  onclick="window.history.back();"/>
             </form>
         </div>
     </div>
 </body>
- <script type="text/javascript">
-            function Redirect() {
-                document.location.reload("templates/home.html");
-            }
-      </script>
-
 </html>
 
